@@ -6,6 +6,7 @@
     <item href="/features/">Features</item>
     <item href="/data/doc/gstreamer/head/faq/html/">FAQ</item>
     <item href="/news/">News</item>
+    <item href="/planet/">Planet</item>
     <item href="/download/">Download</item>
 
     <item href="/modules/">Modules</item>
